--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "zai": "dist/index.js"
   },
   "scripts": {
-    "build": "bun run build:node && bun run build:statusline && cp dist/index.js tokensight/dist/index.js && cp dist/statusline.js tokensight/dist/statusline.js",
+    "build": "bun run build:node && bun run build:statusline",
     "build:node": "bun build src/index.ts --outfile dist/index.js --target node && chmod +x dist/index.js",
     "build:statusline": "bun build src/statusline/index.ts --outfile dist/statusline.js --target node && chmod +x dist/statusline.js",
     "dev": "bun run src/index.ts",
