Include dist files and prepare script for plugin distribution
- Remove dist/ from .gitignore to commit built files (matching claude-hud)
- Add prepare script to auto-build during plugin installation
- Commit compiled dist/index.js and dist/statusline.js

This ensures the plugin works immediately when installed from marketplace
without requiring manual build steps.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "zai": "dist/index.js"
   },
   "scripts": {
+    "prepare": "bun run build",
     "build": "bun run build:node && bun run build:statusline",
     "build:node": "bun build src/index.ts --outfile dist/index.js --target node && chmod +x dist/index.js",
     "build:statusline": "bun build src/statusline/index.ts --outfile dist/statusline.js --target node && chmod +x dist/statusline.js",
